Added extra query arguments
